finish home page

--- a/Frontend - Organi/home.html
+++ b/Frontend - Organi/home.html
@@ -335,6 +335,7 @@
     <!--BANNER-END-->
 
 
+
     <!--SLIDER-START-->
 
     <section id="slider" class="mt-3">
@@ -418,6 +419,7 @@
     </section>
 
     <!--SLIDER-END-->
+
 
 
     <!--SERVICE-START-->
@@ -554,6 +556,7 @@
     </section>
 
     <!--CATEGORY-END-->
+
 
 
     <!--TAB-MENU-PRODUCT-START-->
@@ -3103,6 +3106,7 @@
     <!--TAB-MENU-PRODUCT-END-->
 
 
+
     <!--ADVERTISEMENT-START-->
     <section id="advertisement">
 
@@ -3125,6 +3129,7 @@
 
     </section>
     <!--ADVERTISEMENT-END-->
+
 
 
     <!--TOP-FEATURED-PRODUCT-START-->
@@ -6113,15 +6118,15 @@
 
   <footer>
 
-    <section id="footer" class="mt-4">
+    <section id="footer" class="mt-5">
 
-      <div class="bg-image">
+      <div class="bg-image position-relative">
 
         <div class="upper-side py-5">
 
             <div class="footer-info">
 
-              <div class="left-side">
+              <div class="left-side horizontal-line">
 
                 <div class="logo">
                   <img src="assets/images/home/info-logos/footer-logo.png" alt="">
@@ -6146,7 +6151,7 @@
               </div>
   
   
-              <div class="middle-side">
+              <div class="middle-side horizontal-line">
   
                 <div class="list">
   
@@ -6175,11 +6180,11 @@
                   <div class="list-group">
                    <a href=""><h4>Contact Us</h4></a>
                     <ul>
-                      <li><a href="">Address: 1429 Netus Rd, NY 48247</a></li>
-                      <li><a href="">Email: organi_824@gmail.com</a></li>
-                      <li><a href="">Phone: (+994) 050-717-18-30</a></li>
-                      <li><a href="">Payment Accepted</a></li>
-                      <li><a href="">dsfsfs</a></li>
+                      <li><a href=""><span>Address: </span>1429 Netus Rd, NY 48247</a></li>
+                      <li><a href=""><span>Email: </span>organi_824@gmail.com</a></li>
+                      <li><a href=""><span>Phone: </span>(+994) 050-717-18-30</a></li>
+                      <li><a href=""><span>Payment Accepted</span></a></li>
+                      <li><a href=""><img src="assets/images/home/info-logos/payment.png" alt=""></a></li>
                     </ul>
                   </div>
     
@@ -6188,7 +6193,7 @@
               </div>
 
 
-              <div class="right-side">
+              <div class="right-side horizontal-line">
                 <div class="social-medias d-flex my-4">
   
                     <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
@@ -6208,13 +6213,31 @@
 
         <div class="down-side">
 
+            <div class="left-side">
+              <p>Copyright © 2022 <span>ORGANI</span> Inc. All rights reserved.</p>
+            </div>
+
+            <div class="right-side">
+              <ul>
+                <li><a href=""><span>Privacy</span></a></li>
+                <li><a href="">Terms of Use</a></li>
+                <li><a href="">Sales and Refunds</a></li>
+              </ul>
+            </div>
+        </div>
+
+        <div class="up-arrow">
+          <i class="fa-solid fa-arrow-up"></i>
         </div>
 
       </div>
 
     </section>
 
+
   </footer>
+
+
 
 
   <!--FOOTER-START-->
