finish about page

--- a/Frontend - Organi/home.html
+++ b/Frontend - Organi/home.html
@@ -123,7 +123,9 @@
               </div>
 
               <div class="flags">
+
                 <div class="flag-header">
+                  
                   <div class="country-flag">
                     <span>US</span>
 
@@ -134,8 +136,10 @@
                   </div>
 
                 </div>
-                <div class="flag-content">
-                  <div class="country-flag">
+
+                <div class="flag-content invisible">
+
+                  <div class="country-flag flag-item">
                     <span>AZ</span>
 
                     <div class="image">
@@ -143,7 +147,8 @@
                     </div>
 
                   </div>
-                  <div class="country-flag">
+
+                  <div class="country-flag flag-item">
                     <span>TR</span>
 
                     <div class="image turkey">
