--- a/Frontend - Organi/shop.html
+++ b/Frontend - Organi/shop.html
@@ -14,6 +14,7 @@
 
 <body>
 
+ 
   <!--HEADER-START-->
 
   <header>
@@ -117,7 +118,9 @@
               </div>
 
               <div class="flags">
+
                 <div class="flag-header">
+                  
                   <div class="country-flag">
                     <span>US</span>
 
@@ -128,8 +131,10 @@
                   </div>
 
                 </div>
-                <div class="flag-content">
-                  <div class="country-flag">
+
+                <div class="flag-content invisible">
+
+                  <div class="country-flag flag-item">
                     <span>AZ</span>
 
                     <div class="image">
@@ -137,7 +142,8 @@
                     </div>
 
                   </div>
-                  <div class="country-flag">
+
+                  <div class="country-flag flag-item">
                     <span>TR</span>
 
                     <div class="image turkey">
@@ -283,6 +289,8 @@
 
   <main>
 
+    <!--BANNER-START-->
+
     <section id="banner">
 
       <div class="col-sm-12 col-md-12 col-lg-12">
@@ -296,6 +304,11 @@
       </div>
 
     </section>
+
+    <!--BANNER-END-->
+
+
+    <!--FILTER-START-->
 
     <section id="filtering" class="mt-5">
 
@@ -1675,6 +1688,8 @@
 
 
     </section>
+
+     <!--FILTER-END-->
 
   </main>
 
