finish contact page

--- a/Frontend - Organi/home.html
+++ b/Frontend - Organi/home.html
@@ -478,7 +478,8 @@
 
     </section>
 
-    <!--SERVICE-START-->
+    <!--SERVICE-END-->
+
 
 
     <!--CATEGORY-START-->
@@ -6019,6 +6020,7 @@
     <!--TOP-RATED-PRODUCT-END-->
 
 
+
     <!--COUNTDOWN-START-->
 
     <section id="countdown">
@@ -6085,6 +6087,7 @@
     </section>
 
     <!--COUNTDOWN-END-->
+
 
 
     <!--BRAND-START-->
@@ -6193,6 +6196,7 @@
     <!--BRAND-END-->
 
 
+
     <!--FEEDBACK-START-->
 
     <section id="feedback" class="mt-4">
@@ -6203,7 +6207,7 @@
           <div id="carouselExampleFade" class="carousel slide slider carousel-fade">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <div class="bg-color">
+                <div class="bg-color bg-color1">
 
                   <div class="feedback-image">
                     <img src="assets/images/feedbacks/feedback2.jpg" alt="">
@@ -6222,7 +6226,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="bg-color">
+                <div class="bg-color bg-color2">
 
                   <div class="feedback-image">
                     <img src="assets/images/feedbacks/feedback1.jpg" alt="">
@@ -6241,7 +6245,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="bg-color">
+                <div class="bg-color bg-color3">
 
                   <div class="feedback-image">
                     <img src="assets/images/feedbacks/feedback3.jpg" alt="">
@@ -6279,6 +6283,7 @@
 
     <!--FEEDBACK-END-->
 
+    
 
     <!--BLOG-START-->
 
@@ -6426,6 +6431,7 @@
 
   </main>
 
+
   <!--MAIN-END-->
 
 
@@ -6558,7 +6564,9 @@
 
   </footer>
 
-  <!--FOOTER-START-->
+  <!--FOOTER-END-->
+
+
 
 
   <script src="assets/lib/jquery/jquery.min.js"></script>
