--- a/Frontend - Organi/shop.html
+++ b/Frontend - Organi/shop.html
@@ -286,8 +286,8 @@
   <!--MAIN-START-->
 
 
-
   <main>
+
 
     <!--BANNER-START-->
 
@@ -308,9 +308,10 @@
     <!--BANNER-END-->
 
 
+
     <!--FILTER-START-->
 
-    <section id="filtering" class="mt-5">
+    <section id="filtering" class="mt-4">
 
 
       <div class="row" style="width: 100%;">
@@ -538,16 +539,31 @@
 
         <div class="col-sm-12 col-md-6 col-lg-9">
 
-          <div class="sort-by">
-            <span>Sort by</span>
+          <div class="breadcrumb-sortby d-flex">
 
-            <select id="">
-              <option value="option1">Price - Low to High</option>
-              <option value="option2">Price - High to Low</option>
-              <option value="option3">Name - A to Z</option>
-              <option value="option4">Name - Z to A</option>
-            </select>
-
+            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <div class="breadcrumb-items">
+                  <li class="breadcrumb-item"><a href="home.html">Home</a></li>
+                  <li class="breadcrumb-item active"><a href="shop.html">Shop</a></li>
+                  <li class="breadcrumb-item"><a href="blog.html">Blog</a></li>
+                  <li class="breadcrumb-item"><a href="about.html">About</a></li>
+                  <li class="breadcrumb-item"><a href="contact.html">Contact</a></li>
+                </div>
+              </ol>
+            </nav>
+  
+            <div class="sort-by">
+              <span>Sort by</span>
+  
+              <select id="">
+                <option value="option1">Price - Low to High</option>
+                <option value="option2">Price - High to Low</option>
+                <option value="option3">Name - A to Z</option>
+                <option value="option4">Name - Z to A</option>
+              </select>
+  
+            </div>
           </div>
 
           <div class="right-side products mt-5">
@@ -1691,8 +1707,8 @@
 
      <!--FILTER-END-->
 
-  </main>
 
+  </main>
 
 
   <!--MAIN-END-->
@@ -1824,7 +1840,7 @@
 
   </footer>
 
-  <!--FOOTER-START-->
+  <!--FOOTER-END-->
 
 
 
