finish product detail page

--- a/Frontend - Organi/about.html
+++ b/Frontend - Organi/about.html
@@ -87,8 +87,12 @@
                   <div class="search-design2">
 
                   </div>
-                  <input type="text" class="form-control" placeholder="Search anything ... ">
-                  <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+
+                  <form>
+                    <input type="text" class="form-control" placeholder="Search anything ... ">
+                    <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                  </form>
+
                 </div>
               </div>
             </div>
@@ -121,7 +125,7 @@
               <div class="flags">
 
                 <div class="flag-header">
-
+                  
                   <div class="country-flag">
                     <span>US</span>
 
@@ -296,7 +300,7 @@
 
       <div class="col-sm-12 col-md-12 col-lg-12">
 
-        <div class="banner">
+        <div class="banner" style="background-image: url(assets/images/banners/banner6.jpg)">
           <h1>About us</h1>
           <p>Foods are any substance consumed by an organism for nutritional support is usually of plant, animal, or
             fungal origin and contains essential nutrients such as carbohydrates, fats, proteins, vitamins, or minerals.
@@ -702,22 +706,18 @@
               </div>
 
               <div class="subscribe my-4">
-                <div class="input">
+                
+                <form class="input">
                   <input class="form-control" type="text" placeholder="Email Address">
-                </div>
+                  <button type="submit" class="btn btn-success subscribe-btn" href="">Subscribe</a>
+                </form>
 
-                <div class="subscribe-btn">
-                  <a class="btn btn-success" href="">Subscribe</a>
-                </div>
               </div>
 
               <div class="paragraph">
-                <p>Vegetables are particularly high in fiber, which is needed for optimal digestion.
-                  They have a low
-                  glycemic index, so your blood sugar won’t rise quickly after a meal. The American
-                  Diabetes Association
-                  recommends at least 3 to 5 servings per day of non-starchy vegetables like broccoli,
-                  carrots, or
+                <p>Vegetables are particularly high in fiber, which is needed for optimal digestion. They have a low
+                  glycemic index, so your blood sugar won’t rise quickly after a meal. The American Diabetes Association
+                  recommends at least 3 to 5 servings per day of non-starchy vegetables like broccoli, carrots, or
                   cauliflower.</p>
               </div>
             </div>
@@ -758,13 +758,11 @@
                     <h4>Contact Us</h4>
                   </a>
                   <ul>
-                    <li><a href="contact.html"><span>Address: </span>1429 Netus Rd, NY 48247</a>
-                    </li>
+                    <li><a href="contact.html"><span>Address: </span>1429 Netus Rd, NY 48247</a></li>
                     <li><a href="contact.html"><span>Email: </span>organi_824@gmail.com</a></li>
                     <li><a href="contact.html"><span>Phone: </span>(+994) 050-717-18-30</a></li>
                     <li><a href=""><span>Payment Accepted</span></a></li>
-                    <li><a href=""><img src="assets/images/info-logos/payment.png" alt=""></a>
-                    </li>
+                    <li><a href=""><img src="assets/images/info-logos/payment.png" alt=""></a></li>
                   </ul>
                 </div>
 
