--- a/Frontend - Organi/shop.html
+++ b/Frontend - Organi/shop.html
@@ -14,7 +14,6 @@
 
 <body>
 
- 
   <!--HEADER-START-->
 
   <header>
@@ -86,8 +85,12 @@
                   <div class="search-design2">
 
                   </div>
-                  <input type="text" class="form-control" placeholder="Search anything ... ">
-                  <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+
+                  <form>
+                    <input type="text" class="form-control" placeholder="Search anything ... ">
+                    <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                  </form>
+
                 </div>
               </div>
             </div>
@@ -295,7 +298,7 @@
 
       <div class="col-sm-12 col-md-12 col-lg-12">
 
-        <div class="banner">
+        <div class="banner" style="background-image: url(assets/images/banners/banner6.jpg)">
           <h1>Shop</h1>
           <p>Food is one of the basic necessities of life. Food contains nutrients essential for the growth, repair, and
             maintenance of body tissues and for the regulation of vital processes.</p>
@@ -1683,8 +1686,6 @@
                 </div>
               </div>
 
-              
-
             </div>
 
           </div>
@@ -1735,13 +1736,12 @@
               </div>
 
               <div class="subscribe my-4">
-                <div class="input">
+                
+                <form class="input">
                   <input class="form-control" type="text" placeholder="Email Address">
-                </div>
+                  <button type="submit" class="btn btn-success subscribe-btn" href="">Subscribe</a>
+                </form>
 
-                <div class="subscribe-btn">
-                  <a class="btn btn-success" href="">Subscribe</a>
-                </div>
               </div>
 
               <div class="paragraph">
@@ -1813,6 +1813,10 @@
             </div>
           </div>
 
+
+
+
+
         </div>
 
         <div class="down-side">
@@ -1841,6 +1845,7 @@
   </footer>
 
   <!--FOOTER-END-->
+
 
 
 
