--- a/Frontend - Organi/home.html
+++ b/Frontend - Organi/home.html
@@ -43,7 +43,7 @@
             <div class="col-sm-12 col-md-6 col-lg-6">
               <div class="social-medias">
                 <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.twitter.com/"><i class="fa-brands fa-twitter"></i></a>
                 <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://www.pinterest.com/"><i class="fa-brands fa-pinterest-p"></i></a>
@@ -213,7 +213,7 @@
                   <div class="account-title ">
                     <i>
                       <li>
-                        <a href="login.html">Account</a>
+                        <a href="register.html">Account</a>
                         <div class="horizontal-line"></div>
                       </li>
                     </i>
@@ -1422,7 +1422,7 @@
                       <i class="fa-solid fa-star active"></i>
                     </div>
                     <span class="product-review">Reviews (3)</span>
-                    <h6 class="product-name">Hamburger</h6>
+                    <h6 class="product-name">Burger</h6>
                     <h6 class="product-price"><span class="discount">$34</span><span>$28</span><span>(15%
                         discount)</span></h6>
                     <a href="cart.html" class="product-add-to-cart"><i class="fas fa-shopping-basket"></i>Add to
@@ -2319,7 +2319,7 @@
                       <i class="fa-solid fa-star active"></i>
                     </div>
                     <span class="product-review">Reviews (3)</span>
-                    <h6 class="product-name">Hamburger</h6>
+                    <h6 class="product-name">Burger</h6>
                     <h6 class="product-price"><span class="discount">$34</span><span>$28</span><span>(15%
                         discount)</span></h6>
                     <a href="cart.html" class="product-add-to-cart"><i class="fas fa-shopping-basket"></i>Add to
@@ -3214,7 +3214,7 @@
                       <i class="fa-solid fa-star active"></i>
                     </div>
                     <span class="product-review">Reviews (3)</span>
-                    <h6 class="product-name">Hamburger</h6>
+                    <h6 class="product-name">Burger</h6>
                     <h6 class="product-price"><span class="discount">$34</span><span>$28</span><span>(15%
                         discount)</span></h6>
                     <a href="cart.html" class="product-add-to-cart"><i class="fas fa-shopping-basket"></i>Add to
@@ -4153,7 +4153,7 @@
                   <i class="fa-solid fa-star active"></i>
                 </div>
                 <span class="product-review">Reviews (3)</span>
-                <h6 class="product-name">Hamburger</h6>
+                <h6 class="product-name">Burger</h6>
                 <h6 class="product-price"><span class="discount">$34</span><span>$28</span><span>(15%
                     discount)</span></h6>
                 <a href="cart.html" class="product-add-to-cart"><i class="fas fa-shopping-basket"></i>Add to cart</a>
@@ -5055,7 +5055,7 @@
                   <i class="fa-solid fa-star active"></i>
                 </div>
                 <span class="product-review">Reviews (3)</span>
-                <h6 class="product-name">Hamburger</h6>
+                <h6 class="product-name">Burger</h6>
                 <h6 class="product-price"><span class="discount">$34</span><span>$28</span><span>(15%
                     discount)</span></h6>
                 <a href="cart.html" class="product-add-to-cart"><i class="fas fa-shopping-basket"></i>Add to cart</a>
@@ -5956,7 +5956,7 @@
                   <i class="fa-solid fa-star active"></i>
                 </div>
                 <span class="product-review">Reviews (3)</span>
-                <h6 class="product-name">Hamburger</h6>
+                <h6 class="product-name">Burger</h6>
                 <h6 class="product-price"><span class="discount">$34</span><span>$28</span><span>(15%
                     discount)</span></h6>
                 <a href="cart.html" class="product-add-to-cart"><i class="fas fa-shopping-basket"></i>Add to cart</a>
@@ -6432,7 +6432,7 @@
 
       </div>
 
-      <div class="blog-btn text-center mt-3">
+      <div class="blog-btn text-center mt-4">
         <a class="btn btn-success" href="blog.html">Show All Blogs</a>
       </div>
 
