--- a/Frontend - Organi/shop.html
+++ b/Frontend - Organi/shop.html
@@ -37,7 +37,7 @@
             <div class="col-sm-12 col-md-6 col-lg-6">
               <div class="social-medias">
                 <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.twitter.com/"><i class="fa-brands fa-twitter"></i></a>
                 <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://www.pinterest.com/"><i class="fa-brands fa-pinterest-p"></i></a>
@@ -207,7 +207,7 @@
                   <div class="account-title ">
                     <i>
                       <li>
-                        <a href="login.html">Account</a>
+                        <a href="register.html">Account</a>
                         <div class="horizontal-line"></div>
                       </li>
                     </i>
@@ -1393,7 +1393,7 @@
                       <i class="fa-solid fa-star active"></i>
                     </div>
                     <span class="product-review">Reviews (3)</span>
-                    <h6 class="product-name">Hamburger</h6>
+                    <h6 class="product-name">Burger</h6>
                     <h6 class="product-price"><span class="discount">$34</span><span>$28</span><span>(15%
                         discount)</span></h6>
                     <a href="cart.html" class="product-add-to-cart"><i class="fas fa-shopping-basket"></i>Add to
@@ -1616,7 +1616,7 @@
                       <i class="fa-solid fa-star active"></i>
                     </div>
                     <span class="product-review">Reviews (3)</span>
-                    <h6 class="product-name">Hamburger</h6>
+                    <h6 class="product-name">Burger</h6>
                     <h6 class="product-price"><span class="discount">$34</span><span>$28</span><span>(15%
                         discount)</span></h6>
                     <a href="cart.html" class="product-add-to-cart"><i class="fas fa-shopping-basket"></i>Add to
