finish reset-password page

--- a/Frontend - Organi/blog.html
+++ b/Frontend - Organi/blog.html
@@ -210,9 +210,9 @@
                                 <div class="drop-down-title">
                                  
                                     <li>
-                                        <a href="#">Pages</a>
+                                        <a class="hover" href="#">Pages</a>
                                         <div class="horizontal-line"></div>
-                                        <i class="fa-solid fa-chevron-down"></i>
+                                        <i class="fa-solid fa-chevron-down hover"></i>
                                     </li>
                                 </div>
 
@@ -243,9 +243,9 @@
                                 <div class="drop-down-title">
 
                                     <li>
-                                        <a href="register.html">Account</a>
+                                        <a class="hover" href="register.html">Account</a>
                                         <div class="horizontal-line"></div>
-                                        <i class="fa-solid fa-chevron-down"></i>
+                                        <i class="fa-solid fa-chevron-down hover"></i>
                                     </li>
 
 
@@ -311,7 +311,8 @@
 </header>
 
 <!--HEADER-END-->
-  
+
+
 
 
   <!--MAIN-START-->
@@ -770,7 +771,7 @@
 
     <section id="footer" class="mt-5">
 
-      <div class="bg-image position-relative">
+      <div class="bg-image position-relative" style="background-image: url(assets/images/backgrounds/background4.png);">
 
         <div class="upper-side">
 
