--- a/Frontend - Organi/contact.html
+++ b/Frontend - Organi/contact.html
@@ -14,9 +14,9 @@
 
 <body>
 
-   <!--HEADER-START-->
+  <!--HEADER-START-->
 
-   <header>
+  <header>
 
     <section id="header">
 
@@ -210,9 +210,9 @@
                                 <div class="drop-down-title">
                                  
                                     <li>
-                                        <a href="#">Pages</a>
+                                        <a class="hover" href="#">Pages</a>
                                         <div class="horizontal-line"></div>
-                                        <i class="fa-solid fa-chevron-down"></i>
+                                        <i class="fa-solid fa-chevron-down hover"></i>
                                     </li>
                                 </div>
 
@@ -243,9 +243,9 @@
                                 <div class="drop-down-title">
 
                                     <li>
-                                        <a href="register.html">Account</a>
+                                        <a class="hover" href="register.html">Account</a>
                                         <div class="horizontal-line"></div>
-                                        <i class="fa-solid fa-chevron-down"></i>
+                                        <i class="fa-solid fa-chevron-down hover"></i>
                                     </li>
 
 
@@ -539,7 +539,7 @@
       <h1>Our Stores</h1>
       <div class="row" style="width: 100%;">
         <div class="col-ms-12 col-md-6 col-lg-3">
-          <div class="city city1">
+          <div class="city city1" style="background-image: url(assets/images/cities/city2.jpg);">
           </div>
           <div class="city-address">
             <p>St. Mark's Place, New York</p>
@@ -549,7 +549,7 @@
         </div>
 
         <div class="col-ms-12 col-md-6 col-lg-3">
-          <div class="city city2">
+          <div class="city city2" style="background-image: url(assets/images/cities/city3.jpg);">
           </div>
           <div class="city-address">
             <p>Kichijoji Sun Road 45, Tokio</p>
@@ -559,7 +559,7 @@
         </div>
 
         <div class="col-ms-12 col-md-6 col-lg-3">
-          <div class="city city3">
+          <div class="city city3" style="background-image: url(assets/images/cities/city4.jpg);">
           </div>
           <div class="city-address">
             <p>Lugarno Torrig Road 73, Italy</p>
@@ -569,7 +569,7 @@
         </div>
 
         <div class="col-ms-12 col-md-6 col-lg-3">
-          <div class="city city4">
+          <div class="city city4" style="background-image: url(assets/images/cities/city5.jpg);">
           </div>
           <div class="city-address">
             <p>Ru Château Road 35, France</p>
@@ -602,7 +602,7 @@
 
     <section id="footer" class="mt-5">
 
-      <div class="bg-image position-relative">
+      <div class="bg-image position-relative" style="background-image: url(assets/images/backgrounds/background4.png);">
 
         <div class="upper-side">
 
