--- a/Frontend - Organi/register.html
+++ b/Frontend - Organi/register.html
@@ -15,9 +15,9 @@
 <body>
 
 
-   <!--HEADER-START-->
+  <!--HEADER-START-->
 
-   <header>
+  <header>
 
     <section id="header">
 
@@ -211,9 +211,9 @@
                                 <div class="drop-down-title">
                                  
                                     <li>
-                                        <a href="#">Pages</a>
+                                        <a class="hover" href="#">Pages</a>
                                         <div class="horizontal-line"></div>
-                                        <i class="fa-solid fa-chevron-down"></i>
+                                        <i class="fa-solid fa-chevron-down hover"></i>
                                     </li>
                                 </div>
 
@@ -244,9 +244,9 @@
                                 <div class="drop-down-title">
 
                                     <li>
-                                        <a href="register.html">Account</a>
+                                        <a class="hover" href="register.html">Account</a>
                                         <div class="horizontal-line"></div>
-                                        <i class="fa-solid fa-chevron-down"></i>
+                                        <i class="fa-solid fa-chevron-down hover"></i>
                                     </li>
 
 
@@ -384,7 +384,7 @@
 
                             <div class="input">
                                 <label for="confirm-password">Repeat Password</label>
-                                <input id="confirm-password" type="password" placeholder="RepeatPassword">
+                                <input id="confirm-password" type="password" placeholder="Repeat Password">
                                 <i class="fa-solid fa-eye eye"></i>
                                 <div class="line"></div>
                             </div>
@@ -441,7 +441,7 @@
 
         <section id="footer">
 
-            <div class="bg-image position-relative">
+            <div class="bg-image position-relative" style="background-image: url(assets/images/backgrounds/background4.png);">
 
                 <div class="upper-side">
 
